[package]
name = "arpc"
version = "0.4.5"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0"
byteorder = "1.3"
bytes = "0.5"
chrono = "0.4"
crossbeam-queue = "0.2"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
# postgres = { version = "0.17", features = ["with-chrono-0_4"] }
# r2d2 = "0.8"
# r2d2_postgres = "0.16"
tokio-postgres = "0.5"
rand = "0.7"
regex = "1.3"
rp_client = { git = "https://github.com/serbe/rp-client", version = "0.3.10" }
# reqwest = { version = "0.9", features = ["socks"] }
# serde = { version = "1.0", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# sled = "0.29"
# tokio-codec = "0.1"
# tokio-io = "0.1"
# tokio-tcp = "0.1"
# tokio-signal = "0.2"
tokio = { version = "0.2", default-features=false, features=["tcp", "time", "signal", "io-util"] }
tokio-util = { version = "0.2", features = ["codec"] }
